--- a/01 - Bits to Character Encoding.Rmd
+++ b/01 - Bits to Character Encoding.Rmd
@@ -110,7 +110,21 @@ have guessed from the "16" and the "32", these protocols allow for more and more
 complicated character representations.
 
 Despite this increased power most systems go with UTF-8 since it is backwards
-compatible with ASCII.
+compatible with ASCII. If you would like to see a full list of encoding that are
+supported by
+[ICU](https://en.wikipedia.org/wiki/International_Components_for_Unicode) run
+the `stri_enc_list()` function that's part of the `stringi` package - there are
+a lot.
+
+```{r}
+paste("Total number of encodings:", length(stringi::stri_enc_list()))
+```
+
+Here is a sample of 15 of them.
+
+```{r}
+sample(stringi::stri_enc_list(), size = 15)
+```
 
 # Character string encoding in R
 
@@ -241,6 +255,24 @@ Notice the e accent is not a regular number?
 ```{r}
 x <- "café"
 charToRaw(x)
+```
+
+# Character encoding, Tidyverse style
+
+I enjoy working in the tidyverse so I thought it would be helpful to look at
+character encoding from a tidyverse perspective.
+
+The string manipulation workhorse in the tidyverse is the [`stringr`
+package](https://stringr.tidyverse.org). We can specify the encoding of a string
+with the [`str_conv()`
+function](https://stringr.tidyverse.org/reference/str_conv.html).
+
+```{r}
+suppressMessages(suppressWarnings(library(tidyverse)))
+
+str_conv(string = "café", encoding = "latin1")
+str_conv(string = "café", encoding = "UTF-8")
+str_conv(string = "café", encoding = sample(stringi::stri_enc_list(), 1))
 ```
 
 The world of character encoding goes much deeper than this and even farther down
